<resources>
    <string name="app_name">browser</string>
    <string name="input_hint_secret">请输入口令</string>
    <string name="done">完成</string>
    <string name="content_description_header_image">Header Image</string>
    <string name="label_baidu">百度</string>
    <string name="label_bing">必应</string>
    <string name="label_google">Google</string>
    <string name="copyright_title_icons8">icons8</string>
    <string name="copyright_info_icons8">以下 ICON 由 icons8.com 提供</string>
    <string name="copyright_info_button">前往</string>
    <string name="hint_launch_label">名称</string>
    <string name="hint_launch_url">地址</string>
    <string name="hint_launch_icon">图标</string>
    <string name="save">保存</string>
    <string name="title_launch_edit">修改启动器</string>
    <string name="title_launch_create">创建启动器</string>
</resources>