<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.lollipop.clip.RoundClipLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:radius="16dp">

            <com.lollipop.stitch.ColorStitchView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iconView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                tools:src="@drawable/ic_google" />

            <TextView
                android:id="@+id/labelView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:gravity="end"
                android:shadowColor="@android:color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </com.lollipop.clip.RoundClipLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:endIconDrawable="@drawable/ic_baseline_clear_24"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray_7">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_launch_label"
                tools:text="@string/app_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:endIconDrawable="@drawable/ic_baseline_clear_24"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray_7">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_launch_url"
                tools:text="@string/app_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:endIconDrawable="@drawable/ic_baseline_insert_drive_file_24"
            app:endIconMode="custom"
            app:endIconTint="@color/gray_7">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_launch_icon"
                android:inputType="none"
                tools:text="@string/app_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.lollipop.clip.RoundClipLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:radius="5dp"
            app:clipStrokeColor="@color/md_sys_outline"
            app:clipStrokeWidth="1dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorListGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.lollipop.clip.RoundClipLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:backgroundTint="@color/brand_6" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="128dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>